# transmute-c

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/include/transmute/: transmute.h
src/lib/: CMakeLists.txt  transmute.c
src/test/: CMakeLists.txt  main.c  test.c
